--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 torch>=2.1.1
-transformers
+transformers==4.30.2
 accelerate
 trl 
 peft
 sentencepiece
+protobuf  
+cpm_kernels 
+gradio 
+mdtex2html 
